/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.mft.resource.service.swift;

import "swift/SwiftStorage.proto";

service SwiftStorageService {
    
    // Storage

    rpc listSwiftStorage (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorageListRequest) returns (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorageListResponse);

    rpc getSwiftStorage (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorageGetRequest) returns
    (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorage);

    rpc createSwiftStorage (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorageCreateRequest) returns
    (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorage);

    rpc updateSwiftStorage (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorageUpdateRequest) returns
    (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorageUpdateResponse);

    rpc deleteSwiftStorage (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorageDeleteRequest) returns
    (org.apache.airavata.mft.resource.stubs.swift.storage.SwiftStorageDeleteResponse);
}